update session handling
change authentication API to return session ID instead of session token and add logout API
